Use :not selector to target border color on mobile, fixes #28

--- a/.dev/sass/components/_menus.scss
+++ b/.dev/sass/components/_menus.scss
@@ -27,6 +27,16 @@
 		}
 	}
 
+	&:not(.open) ul.menu > li {
+		&.current_page_item > a,
+		&.current-menu-item > a,
+		&.current_page_ancestor > a,
+		&.current_page_parent > a,
+		&.current-menu-ancestor > a {
+			border-color: white;
+		}
+	}
+
 	@media #{$small-only} {
 		position: absolute;
 		top: 0;
@@ -111,7 +121,6 @@
 			&.current_page_parent > a,
 			&.current-menu-ancestor > a {
 				font-weight: 700;
-				border-color: white;
 			}
 		}
 
